Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55330

Bad text rendering with AMD on D3D12

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.8.0 Beta
    • 5.8.0 Alpha
    • Quick: SceneGraph
    • None
    • 0bf89f3ce602ce2ecd3d21bc989aef6f8fb02207

    Description

      Run any Quick app with text elements on D3D12. The glyphs look fine on NVIDIA but have artifacts here and there (styled and outline mainly) on AMD.

      Affects R8 glyphs only. Converting these 8-bit ones to 32-bit and switching .r to .a makes it work so it is something with DXGI_FORMAT_R8_UNORM.

      Attachments

        For Gerrit Dashboard: QTBUG-55330
        # Subject Branch Project Status CR V

        Activity

          People

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes